--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Lettere di Amalia Segre</title>
-      <link href="index.css" rel="stylesheet" type="text/css"><script src="index.js"></script></head>
+      <link href="index.css" rel="stylesheet" type="text/css"><script src="index.js"></script><script src="https://code.jquery.com/jquery-3.7.1.js"></script></head>
    <body>
       <header>
          <h1>Lettere di Amalia Segre</h1>
@@ -656,5 +656,4 @@
             </div>
          </section>
       </main>
-   </body>
-</html>
+   </body><script src="script.js"></script></html>
