--- a/lettere.html
+++ b/lettere.html
@@ -3,7 +3,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Lettere di Amalia Segre</title>
-      <link href="index.css" rel="stylesheet" type="text/css"><script src="index.js"></script></head>
+      <link href="lettere.css" rel="stylesheet" type="text/css"><script src="lettere.js"></script></head>
    <body>
       <header>
          <h1>Lettere di Amalia Segre</h1>
